@@ -1,0 +1,39 @@
+use strict;
+use warnings;
+
+use Test2::V0;
+use TOML::Tiny;
+
+subtest 'oddballs and regressions' => sub{
+  subtest 'strings that look like numbers' => sub{
+    my $parser = TOML::Tiny->new(
+      inflate_integer => sub{
+        use Math::BigInt;
+        Math::BigInt->new(shift);
+      },
+
+      inflate_float => sub{
+        use Math::BigFloat;
+        Math::BigFloat->new(shift);
+      }
+    );
+
+    my $data = $parser->decode(q{
+
+not_an_int = "42"
+is_an_int  = 42
+
+not_a_flt  = "4.2"
+is_a_flt   = 4.2
+
+    });
+
+    ok !ref($data->{not_an_int}), 'strings do not inflate as integers';
+    ok ref($data->{is_an_int}) && $data->{is_an_int}->isa('Math::BigInt'), 'integers do inflate with inflate_integer';
+
+    ok !ref($data->{not_a_flt}), 'strings do not inflate as floats';
+    ok ref($data->{is_a_flt}) && $data->{is_a_flt}->isa('Math::BigFloat'), 'floats do inflate with inflate_float';
+  };
+};
+
+done_testing;
