@@ -1,4 +1,6 @@
 {{$NEXT}}
+- bugfix: strings with "inf" or "nan" in them no longer treated as special
+  floats
 
 0.14 2021-08-02
 - Fix an issue with serialisation of nan, inf, and -inf (thanks jjatria)
